--- a/resources/views/index.htm
+++ b/resources/views/index.htm
@@ -5,22 +5,73 @@
 <meta charset='utf-8'>
 <title>Here is nav page.</title>
 <link rel="stylesheet" href="../css/normalize.css"/>
-<link rel="stylesheet" href="../css/semantic/dist/semantic.min.css"/>
 <link rel="stylesheet" href="../css/index.css"/>
+
+<link rel="stylesheet" href="../css/semantic/dist/semantic.min.css"/>
+
 <script type="text/javascript" src="../script/angular-1.5.2/angular.min.js"></script>
-<script type="text/javascript" src="../css/semantic/dist/semantic.min.js"></script>
+<!-- <script type="text/javascript" src="../css/semantic/dist/semantic.min.js"></script> -->
+<script type="text/javascript" src="../script/index.js"></script>
 </head>
 <body>
 	<header>
 		<h3 id="logo">Mr_Z</h3>
 		<ul id="nav">
-			<li><a href="#">blog</href></li>
-			<li><a href="#">about us</href></li>
+			<li><a href="#">More</href></li>
+			<li><a href="#">Blog</href></li>
+			<li><a href="#">About us</href></li>
 		</ul>
 	</header>
 	<div id="content">
+		<div id="main">
+			<div id="main_first">
+			<section id= "ss">
+				<h3>几米:向左走向右走</h3>
+				<p>要是能从来,我要学历白,几百年前的好坏没那么多人猜.我看着颗猕猴桃,眼泪突然被引爆,我可不是可不是那么爱闹,你那次淋着雨咆哮,廉价小说那几套~~~
+				</p>
+			</section>
+			<section>
+				<h3>东野:解忧杂货店</h3>
+				<p>
+					如果每天都有86400元进入你的银行户头,而你必须当天用光,你会如何运用这笔钱.但是天下真的有这么好的事情吗,是的,而且每天都在发生,你真的有这样一个户头,那就是时间~~~
+				</p>
+			</section>
+			<section>
+				<h3>灵气工作室:人间冷暖</h3>
+				<p>
+					一切从近未来的某一天开始,当时人工AI的机器人服务于人类生活的各个领域,这天.一台人工AI的机器人突然暴走杀死了他的人类主人,这次事故引发了类似消灭有光圈并的疯狗的运动~~~
+				</p>
+			</section>
+			</div>
+			<div id="main_second">
+			<section>
+				<h3>几米:向左走向右走</h3>
+				<p>要是能从来,我要学历白,几百年前的好坏没那么多人猜.我看着颗猕猴桃,眼泪突然被引爆,我可不是可不是那么爱闹,你那次淋着雨咆哮,廉价小说那几套~~~
+				</p>
+			</section>
+			<section>
+				<h3>东野:解忧杂货店</h3>
+				<p>
+					如果每天都有86400元进入你的银行户头,而你必须当天用光,你会如何运用这笔钱.但是天下真的有这么好的事情吗,是的,而且每天都在发生,你真的有这样一个户头,那就是时间~~~
+				</p>
+			</section>
+			<section>
+				<h3>灵气工作室:人间冷暖</h3>
+				<p>
+					一切从近未来的某一天开始,当时人工AI的机器人服务于人类生活的各个领域,这天.一台人工AI的机器人突然暴走杀死了他的人类主人,这次事故引发了类似消灭有光圈并的疯狗的运动~~~
+				</p>
+			</section>
+			</div>
+
+		</div>
+		<div id="team-h">
+			right
+		</div>
 	</div>
 	<footer>
+		<div id="description">
+			<span>created by csu_sh.team</span>
+		</div>
 	</footer>
 </body>
 </html>
