--- a/resources/views/index.htm
+++ b/resources/views/index.htm
@@ -9,23 +9,26 @@
 
 <link rel="stylesheet" href="../css/semantic/dist/semantic.min.css"/>
 
-<script type="text/javascript" src="../script/angular-1.5.2/angular.min.js"></script>
+<!-- <script type="text/javascript" src="../script/angular-1.5.2/angular.min.js"></script> -->
 <!-- <script type="text/javascript" src="../css/semantic/dist/semantic.min.js"></script> -->
+
+<script type="text/javascript" src="../script/jquery/jquery-2.2.2.min.js"></script>
 <script type="text/javascript" src="../script/index.js"></script>
+
 </head>
 <body>
 	<header>
 		<h3 id="logo">Mr_Z</h3>
 		<ul id="nav">
-			<li><a href="#">More</href></li>
-			<li><a href="#">Blog</href></li>
-			<li><a href="#">About us</href></li>
+			<li><a href="#">More</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">About us</a></hr</li>
 		</ul>
 	</header>
 	<div id="content">
 		<div id="main">
 			<div id="main_first">
-			<section id= "ss">
+			<section>
 				<h3>几米:向左走向右走</h3>
 				<p>要是能从来,我要学历白,几百年前的好坏没那么多人猜.我看着颗猕猴桃,眼泪突然被引爆,我可不是可不是那么爱闹,你那次淋着雨咆哮,廉价小说那几套~~~
 				</p>
@@ -65,7 +68,12 @@
 
 		</div>
 		<div id="team-h">
-			right
+			<h3>contact us</h3>
+			<ul id="contact">
+				<li>elman@csu.com</li>
+				<li>maxFang@csu.com</li>
+				<li>dreamZ@csu.com</li>
+			</ul>
 		</div>
 	</div>
 	<footer>
